# EDRefCard

./: .dockerignore  .gitignore  purgePrivateConfigs.py  pyproject.toml
edrefcard/: app.py  bindings.py  data.py  utils.py
edrefcard/templates/: base.html  bind_detail.html  bind_errors.html  bind_list.html  device_detail.html  device_list.html  index.html  warnings.html
tests/: test_bindings.py
